--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
       <a href="#">Contact</a>
     </nav>
 
+    <h2>Our Process</h2>
 
+    <img src="" alt="">
+
+    <h3>Identify</h3>
+
+    <p>We focus on the most important details.</p>
+
+    <img src="" alt="">
+
+    <h3>Understand</h3>
+
+    <p>We study our projects inside and out.</p>
+
+    <img src="" alt="">
+
+    <h3>Execute</h3>
+
+    <p>We put everything we have into our work.</p>
 
 
 
