--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <div class="header">
       <div class="header-content">
         <h1>Broadway Design</h1>
-
       </div>
     </div>
     <nav>
@@ -39,6 +38,26 @@
     <h3>Execute</h3>
 
     <p>We put everything we have into our work.</p>
+
+    <h3>Designed in New York</<h3>
+
+    <h3>Portfolio</h3>
+
+    <p>Coming Soon</p>
+
+    <h3>Team</h3>
+
+    <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+
+    <p>Phone: (555)555-5555</p>
+
+    <p>E-mail: test@example.com</p>
+
+    <p>Twitter: @test</p>
+    
+
 
 
 
