--- a/index.html
+++ b/index.html
@@ -56,11 +56,15 @@
     <p>E-mail: test@example.com</p>
 
     <p>Twitter: @test</p>
+
+    <footer>&copy; Broadway 2018</footer>
     
-
-
-
-
-
+    <nav>
+      <footer><a href="#">Home</a></footer>
+      <footer><a href="#">About</a></footer>
+      <footer><a href="#">Work</a></footer>
+      <footer><a href="#">Team</a></footer>
+      <footer><a href="#">Contact</a></footer>
+    </nav>
   </body>
 </html>
