--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
     <h2>Our Process</h2>
 
-    <img src="" alt="">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
 
     <h3>Identify</h3>
 
     <p>We focus on the most important details.</p>
 
-    <img src="" alt="">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
 
     <h3>Understand</h3>
 
     <p>We study our projects inside and out.</p>
 
-    <img src="" alt="">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
 
     <h3>Execute</h3>
 
@@ -58,7 +58,7 @@
     <p>Twitter: @test</p>
 
     <footer>&copy; Broadway 2018</footer>
-    
+
     <nav>
       <footer><a href="#">Home</a></footer>
       <footer><a href="#">About</a></footer>
