fix footer issues

--- a/index.html
+++ b/index.html
@@ -57,14 +57,6 @@
 
     <p>Twitter: @test</p>
 
-    <footer>&copy; Broadway 2018</footer>
-
-    <nav>
-      <footer><a href="#">Home</a></footer>
-      <footer><a href="#">About</a></footer>
-      <footer><a href="#">Work</a></footer>
-      <footer><a href="#">Team</a></footer>
-      <footer><a href="#">Contact</a></footer>
-    </nav>
+    <nav><footer>&copy; Broadway 2018   <a href="#">Home</a>  <a href="#">About</a>  <a href="#">WorK</a>  <a href="#">Team</a>  <a href="#">Contact</a></footer></nav>
   </body>
 </html>
