--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
-    <div class="header">
-      <div class="header-content">
+    <div id="header">
+      <div id="header-content">
         <h1>Broadway Design</h1>
       </div>
     </div>
@@ -21,19 +21,25 @@
 
     <h2>Our Process</h2>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
+    <div id="squiggly">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
+    </div>
 
     <h3>Identify</h3>
 
     <p>We focus on the most important details.</p>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
+    <div id="circle">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
+    </div>
 
     <h3>Understand</h3>
 
     <p>We study our projects inside and out.</p>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
+    <div id="arrow">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
+    </div>
 
     <h3>Execute</h3>
 
@@ -57,6 +63,9 @@
 
     <p>Twitter: @test</p>
 
-    <nav><footer>&copy; Broadway 2018   <a href="#">Home</a>  <a href="#">About</a>  <a href="#">WorK</a>  <a href="#">Team</a>  <a href="#">Contact</a></footer></nav>
+    <div div="footer">
+      <nav><footer>&copy; Broadway 2018   <a href="#">Home</a>  <a href="#">About</a>  <a href="#">WorK</a>  <a href="#">Team</a>  <a href="#">Contact</a></footer></nav>
+    </div>
+  
   </body>
 </html>
