changes to add background image designed in new york

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
     <p>We put everything we have into our work.</p>
 
-    <h3>Designed in New York</<h3>
+    <div id="newyork">
+      <h3>Designed in New York</<h3>
+    </div>
 
     <h3>Portfolio</h3>
 
@@ -66,6 +68,6 @@
     <div div="footer">
       <nav><footer>&copy; Broadway 2018   <a href="#">Home</a>  <a href="#">About</a>  <a href="#">WorK</a>  <a href="#">Team</a>  <a href="#">Contact</a></footer></nav>
     </div>
-  
+
   </body>
 </html>
