added newyork and newyork content id's

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <p>We put everything we have into our work.</p>
 
     <div id="newyork">
-      <h3>Designed in New York</<h3>
+      <div id="newyork-content">
+        <h3>Designed in New York</<h3>
+      </div>
     </div>
 
     <h3>Portfolio</h3>
