--- a/index.html
+++ b/index.html
@@ -6,40 +6,33 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
+
+    <! --header section -->
+
     <div id="header">
-      <div id="header-content">
-        <h1>Broadway Design</h1>
-      </div>
-    </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Team</a>
-      <a href="#">Contact</a>
-    </nav>
+      <h1>Broadway Design</h1>
+      <p><a href="#home">Home</a></p>
+      <p><a href="#about">About</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
+   </div>
 
     <h2>Our Process</h2>
 
-    <div id="squiggly">
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
-    </div>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
 
     <h3>Identify</h3>
 
     <p>We focus on the most important details.</p>
 
-    <div id="circle">
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
-    </div>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
 
     <h3>Understand</h3>
 
     <p>We study our projects inside and out.</p>
 
-    <div id="arrow">
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
-    </div>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
 
     <h3>Execute</h3>
 
