--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <! --header section -->
+  <! --header section -->
 
     <div id="header">
       <h1>Broadway Design</h1>
@@ -18,32 +18,36 @@
       <p><a href="#contact">Contact</a></p>
    </div>
 
+  <! --process section -->
+
+   <div class="system"  id="process">
     <h2>Our Process</h2>
-
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
-
-    <h3>Identify</h3>
-
-    <p>We focus on the most important details.</p>
-
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
-
-    <h3>Understand</h3>
-
-    <p>We study our projects inside and out.</p>
-
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
-
-    <h3>Execute</h3>
-
-    <p>We put everything we have into our work.</p>
-
-    <div id="newyork">
-      <div id="newyork-content">
-        <h3>Designed in New York</<h3>
+    <div class="system-detail">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
       </div>
+
+    <div class="sytem-detail">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
     </div>
 
+    <div class="system-detail">
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
+  </div>
+
+  <! --new york section -->
+
+    <div class="header">
+      <h2>Designed in New York</<h2>
+    </div>
+
+  
     <h3>Portfolio</h3>
 
     <p>Coming Soon</p>
