added footer and rest of classes

--- a/index.html
+++ b/index.html
@@ -46,27 +46,42 @@
     <div class="header">
       <h2>Designed in New York</<h2>
     </div>
+<! --More info section -->
 
-  
-    <h3>Portfolio</h3>
-
-    <p>Coming Soon</p>
-
-    <h3>Team</h3>
-
-    <p>We're Hiring!</p>
-
-    <h3>Contact</h3>
-
-    <p>Phone: (555)555-5555</p>
-
-    <p>E-mail: test@example.com</p>
-
-    <p>Twitter: @test</p>
-
-    <div div="footer">
-      <nav><footer>&copy; Broadway 2018   <a href="#">Home</a>  <a href="#">About</a>  <a href="#">WorK</a>  <a href="#">Team</a>  <a href="#">Contact</a></footer></nav>
+  <div class="system" id="work">
+    <div class="system-detail">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
     </div>
+  </div>
 
+  <div class="system" id="team">
+    <div class="system-detail">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+  </div>
+
+  <div class="system" id="contact">
+    <div class="system-detail">
+      <h3>Contact</h3>
+      <p>Phone: (555)555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+  </div>
+
+<! --footer section -->
+
+  <div class="footer">
+    <p>
+      &copy; Broadway 2018
+      <a class="btn-nav" href="#home">Home</a>
+      <a class="btn-nav" href="#about">About</a>
+      <a class="btn-nav" href="#work">WorK</a>
+      <a class="btn-nav" href="#team">Team</a>
+      <a class="btn-nav" href="#contact">Contact</a>
+      </p>
+    </div>
   </body>
 </html>
