changes made to html and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <! --header section -->
 
-    <div id="header">
+    <div class="header">
       <h1>Broadway Design</h1>
       <p><a href="#home">Home</a></p>
       <p><a href="#about">About</a></p>
