--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
+    <img style="cursor: zoom-in;" src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png" height="626" width="644">
 
   <! --header section -->
 
